# automation-platform

./: .dockerignore  .gitattributes  .gitignore  LICENSE  build-config.php  configuration-github-actions.json  configuration.dev.json  configuration.github-actions.json  configuration.json  default.nix  login.ph
.build/: coverage.json
.github/: dependabot.yaml
.github/workflows/: build-dev.yml  commit-verifier.yml  dependabot-auto-approve.yml  dependabot-auto-merge.yml
agents/filesystem/: Cargo.toml  build-config.php
agents/filesystem/src/: main.rs
agents/music/: Cargo.toml  deny.toml
agents/music/src/: main.rs
libraries/php/coding-standard/: build-config.php  composer.json  ecs.php  psalm.xml
libraries/rust/directory-watcher/: Cargo.toml  build.rs  directory-watcher.evd
libraries/rust/events/: Cargo.toml  build.rs  events.evd
libraries/rust/events/src/: lib.rs  structs.rs
libraries/rust/music/: Cargo.toml  build.rs  music.evd
libraries/rust/music/src/: client.rs  lib.rs  server.rs  structs.rs
libraries/rust/platform/: Cargo.toml  build-config.php
libraries/rust/platform/src/: async_infra.rs  configuration.rs  events.rs  lib.rs  mounts.rs  postgres.rs  secrets.rs
libraries/rust/rpc-support/: Cargo.toml  build-config.php
libraries/rust/rpc-support/src/: connection.rs  lib.rs  rpc_error.rs  stream.rs  system_time_serializer.rs  wire_format.rs
nix/: dbmate.nix
schemas/: events.schema.json
services/directory-watcher/: .dockerignore  .gitignore  Cargo.nix  Cargo.toml  build-config.php  build.php  result
services/directory-watcher/docker/: Dockerfile  docker.nix  migrations.Dockerfile  migrations.nix
services/directory-watcher/k8s/base/: db.yaml  deployment.yaml  kustomization.yaml  service.yaml
services/directory-watcher/k8s/overlays/dev/: deployment.yaml  kustomization.yaml
services/directory-watcher/migrations/: 20210730163344_test.sql  20210801140337_create_files_table.sql
services/directory-watcher/scripts/: migrate.sh
services/directory-watcher/src/: events.rs  file_status_store.rs  filesystem_events.rs  main.rs  mount.rs  mount_relative_path.rs  rpc_server.rs  scan.rs
services/directory-watcher/src/platform/: events.rs  mod.rs  secrets.rs
services/directory-watcher/src/snapshots/: directory_watcher__rpc_server__tests__file_changed-2.snap  directory_watcher__rpc_server__tests__file_deleted-2.snap  directory_watcher__rpc_server__tests__file_deleted.snap  directory_watcher__rpc_server__tests__file_modified-2.snap  directory_watcher__rpc_server__tests__file_modified.snap  directory_watcher__rpc_server__tests__file_moved-2.snap  directory_watcher__rpc_server__tests__file_moved.snap
services/events/: .dockerignore  .gitignore  .php-cs-fixer.dist.php  Cargo.nix  Cargo.toml  build-config.php  build.php  composer.json  ecs.php  psalm.xml
services/events/docker/: Dockerfile  docker.nix  migrations.Dockerfile  migrations.nix
services/events/k8s/base/: db.yaml  deployment.yaml  kustomization.yaml  queue.yaml  service.yaml
services/events/k8s/overlays/dev/: kustomization.yaml
services/events/migrations/: 20211019182542_create_events_table.sql
services/events/schemas/events/: heartbeat.schema.json
services/events/scripts/: migrate.sh
services/events/src/: main.rs
services/events/src/Events/Infrastucture/: AMQPEndpoint.php  EventSubscriber.php
services/events/src/Events/Infrastucture/Platform/Events/: AMQPEndpoint.php  EventSubscriber.php  InvalidMessage.php  JsonMessageParser.php  MessageParser.php
services/events/src/Platform/: Secret.php  SecretNotFoundException.php  SecretProviderInterface.php
services/events/src/Platform/Kubernetes/: SecretProvider.php
services/events/tools/easy-coding-standard/: composer.json
services/events/tools/psalm/: composer.json
services/music/: Cargo.nix  Cargo.toml  build-config.php
services/music/docker/: Dockerfile  docker.nix  migrations.Dockerfile  migrations.nix
services/music/k8s/base/: db.yaml  deployment.yaml  kustomization.yaml  service.yaml
services/music/migrations/: 20221016125442_initialise.sql  20221016154511_store_handled_events.sql  20221022111559_multiartists.sql  20221022135326_unique_path.sql
services/music/scripts/: migrate.sh
services/music/src/: event_storage.rs  main.rs  music_storage.rs
tools/commit-verifier/: Cargo.toml  build-config.php
tools/commit-verifier/src/: main.rs
tools/dependabot-config-checker/: build-config.php  composer.json  ecs.php  infection.json  phpunit.xml  psalm.xml
tools/dependabot-config-checker/src/: Checker.php  CheckerOutput.php  DefaultCheckerOutput.php  DockerfileFinder.php  ProjectFinder.php
tools/dependabot-config-checker/tests/: CheckerTest.php  DockerfileFinderTest.php  ProjectFinderTest.php
tools/event-compiler/: Cargo.toml  build-config.php
tools/event-compiler/src/: compiler_rust.rs  lib.rs  main.rs  parsing.rs  type_checking.rs
tools/machine-info/: Cargo.toml  build-config.php
tools/machine-info/src/: main.rs
tools/message-compiler/: Cargo.toml
tools/message-compiler/src/: compiler_rust.rs  grammar.lalrpop  main.rs  parsing.rs  type_checking.rs
tools/message-compiler/src/compiler_rust/: client.rs  data.rs  rpc.rs  server.rs  traits.rs
tools/message-compiler/src/compiler_rust/snapshots/: message_compiler__compiler_rust__traits__tests__generate_enums_test.snap  message_compiler__compiler_rust__traits__tests__generate_header_test.snap  message_compiler__compiler_rust__traits__tests__generate_metadata_test.snap  message_compiler__compiler_rust__traits__tests__generate_structs_test.snap
tools/message-compiler/src/snapshots/: message_compiler__compiler_rust__tests__generate_header_test.snap  message_compiler__compiler_rust__tests__generate_metadata_test.snap  message_compiler__compiler_rust__tests__generate_structs_test.snap
