[package]
name = "filesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["cargo"] }
tokio = { version = "1.25.0", features = ["full"] }
async-walkdir="0.2.0"
notify = "5.1.0"
futures-util = "0.3.26"
pathdiff = "0.2.1"

lib-directory-watcher = { path = "../../libraries/rust/directory-watcher" }
rpc-support = { path = "../../libraries/rust/rpc-support" }
