[package]
name = "filesystem"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["cargo"] }
tokio = { version = "1.28.2", features = ["full"] }
async-walkdir="0.2.0"
notify = "6.0.1"
futures = "0.3.28"
pathdiff = "0.2.1"

lib-directory-watcher = { path = "../../libraries/rust/directory-watcher" }
rpc-support = { path = "../../libraries/rust/rpc-support" }
