[package]
name = "agent-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["full"] }
futures = "0.3.25"
futures-util = "0.3.24"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
base64 = "0.20.0"
claxon = "0.4.3"
cpal = "0.14.2"
rodio = { version = "0.16.0", features=["flac"], default-features=false }

platform = {path = "../../libraries/rust/platform/" }
music = {path = "../../libraries/rust/music/" }
