[package]
name = "agent-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.25"
futures-util = "0.3.24"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
claxon = "0.4.3"
cpal = "0.14.2"
rodio = { version = "0.16.0", features=["flac"], default-features=false }
uuid = { version = "1.3.0", features=["v4", "serde"] }
async-trait = "0.1.51"

platform = {path = "../../libraries/rust/platform/" }
music = {path = "../../libraries/rust/music/" }
rpc-support = {path = "../../libraries/rust/rpc-support/" }

[dev-dependencies]
async-stream = "0.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"