[package]
name = "agent-music"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.27"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
claxon = "0.4.3"
rodio = { version = "0.17.1", features=["flac"], default-features=false }
uuid = { version = "1.3.4", features=["v4", "serde"] }
async-trait = "0.1.67"

platform = {path = "../../libraries/rust/platform/" }
music = {path = "../../libraries/rust/music/" }
rpc-support = {path = "../../libraries/rust/rpc-support/" }

[dev-dependencies]
async-stream = "0.3.4"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.93"