[package]
name = "directory-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0"
pathdiff="0.2.1"
postgres-native-tls = "0.5.0"
native-tls = "0.2.11"
serde = { version = "1.0.152", features=["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features=["v4", "serde"] }
tokio = { version = "1.23.0", features=["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-time-0_3"] }
thiserror = "1.0.38"
tracing="0.1.36"
tracing-subscriber = "0.3.16"
async-walkdir="0.2.0"
futures-lite = "1.12.0"
async-trait = "0.1.62"
tempfile="3.2.0"
time = { version = "0.3.17", features=["local-offset", "parsing", "serde", "formatting"] }

platform = { path = "../../libraries/rust/platform" }
events = { path = "../../libraries/rust/events" }
rpc-support = { path = "../../libraries/rust/rpc-support" }
