[package]
name = "directory-watcher"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathdiff="0.2.1"
postgres-native-tls = "0.5.0"
native-tls = "0.2.11"
serde = { version = "1.0.164", features=["derive"] }
serde_json = "1.0.95"
uuid = { version = "1.3.0", features=["v4", "serde"] }
tokio = { version = "1.27.0", features=["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-time-0_3"] }
thiserror = "1.0.40"
tracing="0.1.36"
tracing-subscriber = "0.3.16"
futures = "0.3.28"
async-trait = "0.1.67"
time = { version = "0.3.20", features=["local-offset", "parsing", "serde", "formatting"] }
insta = "1.29.0"

platform = { path = "../../libraries/rust/platform" }
events = { path = "../../libraries/rust/events" }
rpc-support = { path = "../../libraries/rust/rpc-support" }
lib-directory-watcher = { path = "../../libraries/rust/directory-watcher" }