[package]
name = "svc-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = "0.1.9"
tracing="0.1.37"
tracing-subscriber = "0.3.15"
serde = { version = "1.0.144", features=["derive"] }
serde_json="1.0.74"
tokio-postgres = { version = "0.7.7", features=["with-uuid-1", "with-time-0_3", "with-serde_json-1"] }
uuid = { version = "1.1.2", features=["v4"] }
postgres-native-tls="0.5.0"
native-tls="0.2.10"
thiserror = "1.0.37"
time = { version = "0.3.15", features=["local-offset", "parsing", "serde", "formatting"] }
rpc-support = { path="../../libraries/rust/rpc-support"}
async-trait = "0.1.57"
futures-lite = "1.12.0"
async-stream = "0.3.3"
dashmap = "5.4.0"

platform = { path = "../../libraries/rust/platform" }
events = { path = "../../libraries/rust/events" }
