[package]
name = "svc-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
tracing="0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.154", features=["derive"] }
serde_json="1.0.94"
tokio-postgres = { version = "0.7.7", features=["with-uuid-1", "with-time-0_3", "with-serde_json-1"] }
uuid = { version = "1.2.1", features=["v4"] }
postgres-native-tls="0.5.0"
native-tls="0.2.11"
thiserror = "1.0.39"
time = { version = "0.3.20", features=["local-offset", "parsing", "serde", "formatting"] }
rpc-support = { path="../../libraries/rust/rpc-support"}
async-trait = "0.1.66"
futures-lite = "1.12.0"
async-stream = "0.3.4"
dashmap = "5.4.0"

platform = { path = "../../libraries/rust/platform" }
events = { path = "../../libraries/rust/events" }
