[package]
name = "svc-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
music = { path = "../../libraries/rust/music" }
events = { path = "../../libraries/rust/events" }
rpc-support = { path = "../../libraries/rust/rpc-support" }
platform = { path = "../../libraries/rust/platform" }

tokio={ version = "1.26.0", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1"] }
async-trait = "0.1.66"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
futures-core = "0.3.26"
tokio-util = { version = "0.7.7", features=["full"] }
async-std = "1.12.0"
uuid = "1.3.0"
claxon = "0.4.3"
thiserror = "1.0.39"
serde = "1.0.153"
serde_json = "1.0.93"
