[package]
name = "svc-music"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
music = { path = "../../libraries/rust/music" }
events = { path = "../../libraries/rust/events" }
rpc-support = { path = "../../libraries/rust/rpc-support" }
platform = { path = "../../libraries/rust/platform" }

tokio={ version = "1.26.0", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1"] }
async-trait = "0.1.68"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
futures = "0.3.28"
tokio-util = { version = "0.7.7", features=["full"] }
uuid = "1.4.0"
claxon = "0.4.3"
thiserror = "1.0.40"
serde = "1.0.164"
serde_json = "1.0.99"
