[package]
name = "event-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.6", features=["lexer"] }
regex = "1"
petgraph = "0.6.0"
[build-dependencies]
lalrpop = { version = "0.19.6", features=["lexer"] }