[package]
name = "message-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.8", features=["lexer"] }
regex = "1"
petgraph = "0.6.3"
prettyplease= "0.1.0"
quote = "1.0.9"
syn = "1.0.108"
proc-macro2 = "1.0.28"
[build-dependencies]
lalrpop = { version = "0.19.8", features=["lexer"] }