[package]
name = "message-compiler"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.8", features=["lexer"] }
regex = "1"
petgraph = "0.6.3"
prettyplease= "0.2.4"
quote = "1.0.26"
syn = "2.0.12"
proc-macro2 = "1.0.56"
[build-dependencies]
lalrpop = { version = "0.19.8", features=["lexer"] }
[dev-dependencies]
insta= "1.29.0"