[package]
name = "lib-directory-watcher"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tracing = "0.1.37"
tokio = { version = "1.26.0", features = ["full"] }
async-trait = "0.1.67"
futures = "0.3.28"

rpc-support = { path="../rpc-support"}
platform = { path="../platform"}

[build-dependencies]
message-compiler = { path = "../../../tools/message-compiler" }