[package]
name = "events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
uuid = { version = "1.3.0", features=["v4", "serde"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
async-trait = "0.1.64"
thiserror = "1.0.35"
async-std = "1.12.0"
rpc-support = { path="../rpc-support"}
platform = { path="../platform"}

[build-dependencies]
message-compiler={path= "../../../tools/message-compiler" }