[package]
name = "events"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.94"
uuid = { version = "1.4.0", features=["v4", "serde"] }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
async-trait = "0.1.67"
thiserror = "1.0.40"
rpc-support = { path="../rpc-support"}
platform = { path="../platform"}
futures = "0.3.28"

[build-dependencies]
message-compiler={path= "../../../tools/message-compiler" }