[package]
name = "music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.94"
rpc-support = { path="../rpc-support"}
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
async-trait = "0.1.64"
platform={path="../platform"}
thiserror = "1.0.38"
async-std="1.12.0"
uuid = { version = "1.3.0", features=["v4", "serde"] }

[build-dependencies]
message-compiler={path= "../../../tools/message-compiler" }
