[package]
name = "music"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1.0.99"
rpc-support = { path="../rpc-support"}
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
async-trait = "0.1.68"
platform={path="../platform"}
thiserror = "1.0.39"
uuid = { version = "1.3.0", features=["v4", "serde"] }
futures = "0.3.28"

[build-dependencies]
message-compiler={path= "../../../tools/message-compiler" }
