[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1.0.39"
serde = { version = "1.0.152", features=["derive"] }
serde_json = "1.0.94"
jsonpath-rust = "0.2.2"
tracing = "0.1.37"
tokio = { version = "1.26.0", features=["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-time-0_3"] }
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
pathdiff="0.2.1"
