[package]
name = "platform"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1.0.38"
serde = { version = "1.0.156", features=["derive"] }
serde_json = "1.0.94"
jsonpath-rust = "0.2.5"
tracing = "0.1.37"
tokio = { version = "1.26.0", features=["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-time-0_3"] }
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
pathdiff="0.2.1"
