[package]
name = "platform"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1.0.40"
serde = { version = "1.0.159", features=["derive"] }
serde_json = "1.0.95"
jsonpath-rust = "0.2.6"
tracing = "0.1.38"
tokio = { version = "1.27.0", features=["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-time-0_3"] }
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
pathdiff="0.2.1"
