[package]
name = "rpc-support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
async-stream = "0.3.4"
tracing = "0.1.37"
dashmap = "5.3.4"
thiserror = "1.0.39"
futures = "0.3.26"
platform={path="../platform"}
async-trait = "0.1.64"

[build-dependencies]
